# hexxagon

./: Makefile.am  Makefile.in  README  aclocal.m4  confautoconf.sh  configure  configure.ac  mkinstalldirs
images/: Makefile.am  Makefile.in
images/debian/: copyright
images/marble/: board_all.xcf  copyright
src/: Makefile.am  Makefile.in  config.h.in
src/gui/: Makefile.am  Makefile.in  gamemodel.cpp  gamemodel.h  gtkaboutwindow.cpp  gtkaboutwindow.h  gtkboardlist.cpp  gtkboardlist.h  gtkeditwindow.cpp  gtkeditwindow.h  gtkgameoverdialog.cpp  gtkgameoverdialog.h  gtkhexxagonboard.cpp  gtkhexxagonboard.h  gtkhexxagonboardedit.cpp  gtkhexxagonboardedit.h  gtkhexxagonboardplay.cpp  gtkhexxagonboardplay.h  gtkmainmenu.cpp  gtkmainmenu.h  gtkmainwindow.cpp  gtkmainwindow.h  gtknavbar.cpp  gtknavbar.h  gtkscaleimage.cpp  gtkscaleimage.h  gtkscore.cpp  gtkscore.h  helper_functions.cpp  helper_functions.h  hexxagon.cpp  microtime.h
src/libhexx/: Makefile.am  Makefile.in  bitboard64.cpp  bitboard64.h  board.cpp  board.h  game.cpp  game.h  layout.cpp  layout.h  libhexx.h  lookup.cpp  lookup.h  move.cpp  move.h  view.h
