imagedir = $(datadir)/hexxagon/images
nobase_image_DATA = about_top.png computer_wins.png  draw.png  you_win.png \
             default/board_D_0.png \
             default/board_L_0.png default/board_L_1.png default/board_L_2.png \
             default/board_N_0.png default/board_N_1.png default/board_N_2.png \
             debian/board_D_0.png \
             debian/board_L_0.png debian/board_L_1.png debian/board_L_2.png \
             debian/board_N_0.png debian/board_N_1.png debian/board_N_2.png \
             marble/board_D_0.png \
             marble/board_L_0.png marble/board_L_1.png marble/board_L_2.png \
             marble/board_N_0.png marble/board_N_1.png marble/board_N_2.png
             

EXTRA_DIST = $(nobase_image_DATA) marble/board_all.xcf


